MilestoneRFAFullSandBox/src/objects/COA__c.object
<CustomObject>
    <description>Chart of Authority</description>
    <fields>
        <fullName>BOD__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Board of Directors</description>
        <label>BOD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CM_Approver_Final_Level__c</fullName>
        <label>Approver Final Level</label>
        <picklist>
            <picklistValues>
                <fullName>L1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L13</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CM_Approver_Random_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approver Random Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CM_Approver_Steps__c</fullName>
        <label>Approver Steps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CM_Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>1. Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. DME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Approval of Field Sales Operation and VM Customer Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Approval of Customer Agreement for CS KAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Approval of Customer Agreement for Food KAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Approval of Customer Agreement for SAKAYA KAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Approval of Customer Agreement for VM Corporate Sales&amp;Hunter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Approval of Customer Agreement for Corporate KAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8. Approval of Customer Agreement for FV</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CM_L10_10__c</fullName>
        <label>L10_10</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_L10_1__c</fullName>
        <label>L10_1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_L10_2__c</fullName>
        <label>L10_2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_L10_Kizai__c</fullName>
        <label>L10 Kizai</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_L10_Mapping_Level__c</fullName>
        <label>L10_Mapping_Level</label>
        <picklist>
            <picklistValues>
                <fullName>Function3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Function4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Function5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Function6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Function7</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CM_L10_Mapping__c</fullName>
        <defaultValue>false</defaultValue>
        <label>L10_Mapping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CM_L10_Order__c</fullName>
        <label>L10_Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CM_L11_Kizai__c</fullName>
        <label>L11 Kizai</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_L11_Mapping_Level__c</fullName>
        <label>L11_Mapping_Level</label>
        <picklist>
            <picklistValues>
                <fullName>Function3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Function4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Function5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Function6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Function7</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CM_L11_Mapping__c</fullName>
        <defaultValue>false</defaultValue>
        <label>L11_Mapping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CM_L11_Order__c</fullName>
        <label>L11_Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CM_L12_Kizai__c</fullName>
        <label>L12 Kizai</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_L12_Mapping_Level__c</fullName>
        <label>L12_Mapping_Level</label>
        <picklist>
            <picklistValues>
                <fullName>Function3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Function4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Function5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Function6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Function7</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CM_L12_Mapping__c</fullName>
        <defaultValue>false</defaultValue>
        <label>L12_Mapping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CM_L12_Order__c</fullName>
        <label>L12_Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CM_PrimaryCOASubCategory__c</fullName>
        <label>CMPrimary COA Sub Category 1</label>
        <picklist>
            <picklistValues>
                <fullName>1. Approval of Field Sales Operation and VM Customer Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Approval of Customer Agreement for CS KAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Approval of Customer Agreement for Food KAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Approval of Customer Agreement for SAKAYA KAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Approval of Customer Agreement for VM Corporate Sales&amp;Hunter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Approval of Customer Agreement for Corporate KAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Approval of Customer Agreement for FV - VM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Approval of Customer Agreement for FV - OCS, Shop Caffe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Approval of Customer Agreement for FV - Corporate Sales</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CM_Primary_COA_Category_C1__c</fullName>
        <label>CMPrimary COA Category C1</label>
        <picklist>
            <picklistValues>
                <fullName>C. Price promotion for Marketing &amp; Commercial leadership</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CM_Primary_COA_Category_C2__c</fullName>
        <label>CMPrimary COA Category C2</label>
        <picklist>
            <picklistValues>
                <fullName>1. Price promotion for Marketing &amp; Commercial leadership　1. Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Price promotion for Marketing &amp; Commercial leadership　2. Sales promotion expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Flush out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z. Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CM_Primary_COA_Category_C3__c</fullName>
        <label>CMPrimary COA Category C3</label>
        <picklist>
            <picklistValues>
                <fullName>1. Price promotion (wholesale price)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Selling price promotion (full service VM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Non-price promotion (National)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Non-price promotion (Local)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Media expense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. New product sample</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. POS material,Event, incentive, sponsor connection, other sales promotion-related expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Flush out</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CM_Sub_Category_B8__c</fullName>
        <label>Sub Category B8</label>
        <picklist>
            <picklistValues>
                <fullName>a. Non-standard Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Vending Equipment parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c. Incidental work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>d. Vending Equipment Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>e. Equipment retirement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CM_Sub_Category__c</fullName>
        <label>Sub Category</label>
        <picklist>
            <picklistValues>
                <fullName>01. Contract unit price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02. Special price / Promotion discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03. FS selling price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04. FS commission (Variable)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05. FS commission (Fixed)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06. Key money / Rebate / Spot / Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07. Only in the case of Rebate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08. Other support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09. Promotion / Other expense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10. Promotion (Cooperation / Sampling)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CM_Sub_sub_Category_B8__c</fullName>
        <label>Sub-sub Category B8</label>
        <picklist>
            <picklistValues>
                <fullName>1. Application for Non-standard Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Total amount per transaction ＞ 100,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Total amount per transaction ≦ 100,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Total amount per transaction ＞ 500,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Total amount per transaction ≦ 500,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Application for Vending Equipment Leases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Necessity of sales/transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Depletion treatment of equipment whose whereabouts are unaccounted for</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CM_Sub_sub_Category__c</fullName>
        <label>Sub-sub Category</label>
        <picklist>
            <picklistValues>
                <fullName>--- 01. Contract unit price ---</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard wholesale price, and set above the standard wholesale price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outside of the object of approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealings by OCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The deletion request of registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pay in fixed amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Total amount per transaction ＞ 50,000,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>＞ 35,000,000 yen and ≦ 50,000,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>＞ 25,000,000 yen and ≦ 50,000,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>＞ 25,000,000 yen and ≦ 35,000,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>＞ 10,000,000 yen and ≦ 25,000,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>＞ 3,000,000 yen and ≦ 10,000,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>≦ 3,000,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>＞ 1,000,000 yen and ≦ 10,000,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>≦ 1,000,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>＞ 40,000,000 yen and ≦ 50,000,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>＞ 30,000,000 yen and ≦ 50,000,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>＞ 30,000,000 yen and ≦ 40,000,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>＞ 15,000,000 yen and ≦ 30,000,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>＞ 10,000,000 yen and ≦ 30,000,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>＞ 5,000,000 yen and ≦ 15,000,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>≦ 5,000,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Total amount per transaction ＞ 25,000,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>＞ 100,000 yen and ≦ 1,000,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Total amount per transaction ＞ 10,000,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>＞ 7,500,000 yen and ≦ 10,000,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>＞ 5,000,000 yen and ≦ 10,000,000 yen</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Committee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Committee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ELT_1__c</fullName>
        <description>ELT: Executive Leadership Team</description>
        <label>ELT 1</label>
        <picklist>
            <picklistValues>
                <fullName>CEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHRO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CITO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CBIO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPACO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ELT_2__c</fullName>
        <description>ELT: Executive Leadership Team</description>
        <label>ELT 2</label>
        <picklist>
            <picklistValues>
                <fullName>CEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHRO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CITO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CBIO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPACO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ELT_3__c</fullName>
        <description>ELT: Executive Leadership Team</description>
        <label>ELT 3</label>
        <picklist>
            <picklistValues>
                <fullName>CEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHRO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CITO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CBIO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPACO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Function_CokeOne_1__c</fullName>
        <label>Function CokeOne 1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function_CokeOne_2__c</fullName>
        <label>Function CokeOne 2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function_CokeOne_3__c</fullName>
        <label>Function CokeOne 3</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function_Commercial_10__c</fullName>
        <label>Function Commercial 10</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function_Commercial_1__c</fullName>
        <label>Function Commercial 1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function_Commercial_2__c</fullName>
        <label>Function Commercial 2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function_Finance_10__c</fullName>
        <label>Function Finance 10</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function_Finance_1__c</fullName>
        <label>Function Finance 1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function_Finance_2__c</fullName>
        <label>Function Finance 2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function_HR_10__c</fullName>
        <label>Function HR 10</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function_HR_1__c</fullName>
        <label>Function HR 1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function_HR_2__c</fullName>
        <label>Function HR 2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function_Other_10__c</fullName>
        <label>Function Other 10</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function_Other_1__c</fullName>
        <label>Function Other 1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function_Other_2__c</fullName>
        <label>Function Other 2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function_Procurement_10__c</fullName>
        <label>Function Procurement 10</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function_Procurement_1__c</fullName>
        <label>Function Procurement 1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function_Procurement_2__c</fullName>
        <label>Function Procurement 2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function_Supply_Chain_10__c</fullName>
        <label>Function Supply Chain 10</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function_Supply_Chain_1__c</fullName>
        <label>Function Supply Chain 1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function_Supply_Chain_2__c</fullName>
        <label>Function Supply Chain 2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Info_Copy_10__c</fullName>
        <label>Info Copy 10</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Info_Copy_1__c</fullName>
        <label>Info Copy 1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Info_Copy_2__c</fullName>
        <label>Info Copy 2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L10_Kizai__c</fullName>
        <label>L10 Kizai</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L11_Kizai__c</fullName>
        <label>L11 Kizai</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L13_Kizai__c</fullName>
        <label>L13 Kizai</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Left_Bracket__c</fullName>
        <label>Left Bracket</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Left_Sign__c</fullName>
        <label>Left Sign</label>
        <picklist>
            <picklistValues>
                <fullName>&gt;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;=</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Memo__c</fullName>
        <label>Memo</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PrimaryCOACategory__c</fullName>
        <inlineHelpText>This field allows the RFA Creator to select up to 3 COA Categories that apply to the requested transaction.</inlineHelpText>
        <label>Primary COA Category</label>
        <picklist>
            <picklistValues>
                <fullName>I. Purchase, Disposal, Revaluation or Write-off of Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>II. Leases and Rental Contracts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>III. Pricing / Operating Revenues / Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IV. Operating Expenses and Purchases (not covered by General Threshold)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V. Treasury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VI. Personnel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VII. Other Transactions / Activities / Contracts and Agreements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIII. Corporate Structures and Mergers and Acquisitions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IX. Board of Directors Approvals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A. Approval of Pricing Policy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B. Approval of Customer Terms and Conditions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C. Price promotion for Marketing &amp; Commercial leadership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D. Credit Terms / Policies</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PrimaryCOASubCategory2__c</fullName>
        <label>Primary COA Sub Category 2</label>
        <picklist>
            <controllingField>PrimaryCOASubCategory__c</controllingField>
            <picklistValues>
                <fullName>1. Approval of Annual Capital Investment project Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Capital Investment Project Budget Approved (Capital Projects, Medium Projects and Small Projects)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Capital Investment Project Budget Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Unbudgeted Capital Projects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Change of scope in the approved Capital Investment Projects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Fixed Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c. Intangible fixed assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Write-offs of uncollectible trade accounts receivable and other receivables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Inventory Adjustments and Disposals (incl. Flush-outs)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Real Estate - Rental Contracts (CCEJ or Subsidiaries as Tenant)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Movable Assets (including vehicles)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Establishment of and changes to Price, Terms and Conditions Concept (PTC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Specific deviation or a new program to the approved Price, Terms and Conditions Concept</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. New price lists / rebate lists and changes to existing price lists / rebate lists for the full service vending machine business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Changes of gross price lists valid for certain channels, packages and brands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Determination of and changes to the standard cost of sales and intercompany transfer price for KO products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Determination of changes to standard cost of sales for Non-KO products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Approval of the following Customer Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Approval of Customer Agreement for CS KAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Approval of Customer Agreement for Food KAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Approval of Customer Agreement for SAKAYA KAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Approval of Customer Agreement for VM Corporate Sales &amp; Hunter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Approval of Customer Agreement for VM Div. Corporate Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Approval of Customer Agreement for Equipment Operating Rule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8. Approval of Customer Agreement for FV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Establishing or amending overall CCEJ credit policy (including credit limits)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Initial setting of credit limits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Changes of credit limits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Changes of credit limits - Create less risk to the company (shortening credit terms)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>